alignment and pointer sponsor fixes

--- a/src/app/home/sponsors/sponsors.component.scss
+++ b/src/app/home/sponsors/sponsors.component.scss
@@ -5,16 +5,20 @@
     margin: 0 auto;
     width: 100%;
     max-height: 100%;
+    cursor: pointer;
 }
 .aptive {
-    margin-top: 4.5rem!important;
-
+    @media (min-width: 576px) {
+        margin-top: 4.5rem!important;
+    }
 }
 .dow {
     margin-top: 4rem!important;
     @media (max-width: 768px) {
-        margin-left: 26%;
-        margin-top: 2rem!important;
+        @media (min-width: 576px) {
+            margin-left: 26%;
+            margin-top: 2rem!important;
+        }
     }
 }
 .msuleft {
@@ -29,5 +33,21 @@
     @media (min-width: 768px) {
         margin-left: 10%;
         margin-top: 10%;
+    }
+}
+.zf {
+    @media (max-width: 768px) {
+        width: 50%
+    }
+    @media (min-width: 768px) {
+        width: 80%; 
+        margin-left: 5%;
+    }
+}
+.zfcontainer {
+    @media (max-width: 768px) {
+        justify-content: center;
+        align-items: center;
+        display: inherit;
     }
 }
